# zeta-firmware

./: .gitignore  .pre-commit-config.yaml  out.csv  platformio.ini  pyproject.toml  readme.md
scripts/: heatmap_plot.ipynb  realtime_heatmap_plot.py  realtime_plot.ipynb  realtime_plot.py  temperature_drift_analysis.py
src/: main.cpp
